--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <script src="https://kit.fontawesome.com/27cd76a62b.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script>
-    <script src="./node_modules/animejs/lib/anime.min.js"></script>
+    <script src="node_modules/animejs/lib/anime.min.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
         type="text/javascript"></script>
