--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </html>
 
 <head>
-    <script src="anime.min.js"></script>
+    <script src="anime.js"></script>
     <script src="https://kit.fontawesome.com/27cd76a62b.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script>
     <script src="node_modules/animejs/lib/anime.min.js"></script>
